--- a/style.css
+++ b/style.css
@@ -77,6 +77,24 @@ h3 {
   max-width: auto;
 }
 
+.button {
+    background-color: rgba(210, 120, 70, 1);
+    border: none;
+    color: white;
+    padding: 15px 25px;
+    text-align: center;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.button:hover {
+    background-color: rgba(160, 100, 60, 1);
+}
+
+#circlesDatas {
+    margin: 1rem auto;
+}
+
 @media (min-width: 830px) {
     body {
       justify-content: center;
